; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_tree.c_fz_drop_tree.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_tree.c_fz_drop_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, %struct.TYPE_5__*, %struct.TYPE_5__*, %struct.TYPE_5__* }

@tree_sentinel = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fz_drop_tree(i32* %0, %struct.TYPE_5__* %1, void (i32*, i8*)* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca void (i32*, i8*)*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store void (i32*, i8*)* %2, void (i32*, i8*)** %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %8 = icmp ne %struct.TYPE_5__* %7, null
  br i1 %8, label %9, label %49

9:                                                ; preds = %3
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 3
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = icmp ne %struct.TYPE_5__* %12, @tree_sentinel
  br i1 %13, label %14, label %20

14:                                               ; preds = %9
  %15 = load i32*, i32** %4, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 3
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %19 = load void (i32*, i8*)*, void (i32*, i8*)** %6, align 8
  call void @fz_drop_tree(i32* %15, %struct.TYPE_5__* %18, void (i32*, i8*)* %19)
  br label %20

20:                                               ; preds = %14, %9
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 2
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = icmp ne %struct.TYPE_5__* %23, @tree_sentinel
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load i32*, i32** %4, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = load void (i32*, i8*)*, void (i32*, i8*)** %6, align 8
  call void @fz_drop_tree(i32* %26, %struct.TYPE_5__* %29, void (i32*, i8*)* %30)
  br label %31

31:                                               ; preds = %25, %20
  %32 = load i32*, i32** %4, align 8
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %34, align 8
  %36 = call i32 @fz_free(i32* %32, %struct.TYPE_5__* %35)
  %37 = load void (i32*, i8*)*, void (i32*, i8*)** %6, align 8
  %38 = icmp ne void (i32*, i8*)* %37, null
  br i1 %38, label %39, label %45

39:                                               ; preds = %31
  %40 = load void (i32*, i8*)*, void (i32*, i8*)** %6, align 8
  %41 = load i32*, i32** %4, align 8
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i8*, i8** %43, align 8
  call void %40(i32* %41, i8* %44)
  br label %45

45:                                               ; preds = %39, %31
  %46 = load i32*, i32** %4, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %48 = call i32 @fz_free(i32* %46, %struct.TYPE_5__* %47)
  br label %49

49:                                               ; preds = %45, %3
  ret void
}

declare dso_local i32 @fz_free(i32*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
